--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,9 +51,8 @@ body {
 }
 
 .gym-logo {
+    max-width: 80%;
     max-height: 150px;
-    width: auto;
-    height: auto;
     margin-bottom: 1rem;
 }
 
